--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -247,6 +247,11 @@
                                 <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password" name="confirmPassword">
                                 <small id="confirmPasswordError" class="error-text">Passwords do not match</small>
                             </div>
+
+                            <div class="form-group">
+                                <label for="referralCode">Referral Code (Optional)</label>
+                                <input type="text" class="form-control" id="referralCode" name="referralCode" placeholder="Enter referral code">
+                              </div>
                             
                             <button type="submit" class="default-btn">SignUp</button>
                             <a href="/login" class="forgot-password register-link">Do you have an account? Login</a>
