--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -72,6 +72,13 @@
                     <a class="menu-link" href="/admin/coupon"> <i class="icon material-icons md-confirmation_number"></i>
                         <span class="text">Coupon</span>
                     </a>
+                </li>
+
+
+                <li class="menu-item ">
+                    <a class="menu-link" href="/admin/offer"> <i class="icon material-icons md-local_offer"></i>
+                        <span class="text">Offer</span>
+                    </a>
                     
                 </li>
                 <!-- <li class="menu-item ">
