--- a/views/user/address.ejs
+++ b/views/user/address.ejs
@@ -40,7 +40,7 @@
                             <a class="nav-link" id="account-details-tab" href="/changepassword" aria-controls="account-details" aria-selected="false">Change Password</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="account-logout-tab" href="/logout" role="tab" aria-selected="false">Logout</a>
+                            <a class="nav-link" id="account-logout-tab" href="#" onclick="logout()" role="tab" aria-selected="false">Logout</a>
                         </li>
                     </ul>
                 </div>
@@ -339,6 +339,26 @@
             }
         });
     }
+
+
+    function logout() {
+        Swal.fire({
+            title: `Are you sure?`,
+            text: `Do you want to continue to logout?`,
+            icon: "warning",
+            showCancelButton: true,
+            confirmButtonColor: "#000000",
+            cancelButtonColor: "#d33",
+            confirmButtonText: "Logout",
+            cancelButtonText: "Cancel",
+        }).then((result) => {
+            if (result.isConfirmed) {
+                window.location.href = "/logout";
+            }
+        });
+    }
+
+
 </script>
 
 <%- include('../partials/user/footer') %>
