--- a/views/user/changepassword.ejs
+++ b/views/user/changepassword.ejs
@@ -38,7 +38,7 @@
                                     <a class="nav-link active" id="account-details-tab" href="#change-password" aria-controls="account-details" aria-selected="true">Change Password</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="account-logout-tab" href="/logout" role="tab" aria-selected="false">Logout</a>
+                                    <a class="nav-link" id="account-logout-tab" href="#" onclick="logout()" role="tab" aria-selected="false">Logout</a>
                                 </li>
                             </ul>
                         </div>
@@ -126,6 +126,25 @@ document.getElementById('changePasswordForm').addEventListener('submit', functio
         });
     });
 });
+
+function logout() {
+        Swal.fire({
+            title: `Are you sure?`,
+            text: `Do you want to continue to logout?`,
+            icon: "warning",
+            showCancelButton: true,
+            confirmButtonColor: "#000000",
+            cancelButtonColor: "#d33",
+            confirmButtonText: "Logout",
+            cancelButtonText: "Cancel",
+        }).then((result) => {
+            if (result.isConfirmed) {
+                window.location.href = "/logout";
+            }
+        });
+    }
+
+
 </script>
 
 <style>
